@@ -25,17 +25,12 @@ public class ProductDAO {
     }
 
     public List<Product> getProducts(Integer categoryId, Integer promotionId, String sort, Double maxPrice,
-                                     String search ,int index, int size, String status) {
+                                     String search, int index, int size, String status) {
 
         List<Product> list = new ArrayList<>();
-        List<String> keywords = new ArrayList<>();
-        if (search != null && !search.isBlank()) {
-            for (String keyword : search.trim().toLowerCase().split("\\s+")) {
-                if (!keyword.isBlank()) {
-                    keywords.add(keyword);
-                }
-            }
-        }
+        List<String> keywords = splitSearchKeywords(search);
+        boolean hasSearch = search != null && !search.trim().isEmpty();
+
         StringBuilder sql = new StringBuilder(
                 "SELECT p.*, " +
                         "(SELECT pi.promotion_id FROM promotion_items pi WHERE pi.product_id = p.id LIMIT 1) AS current_promo_id, " +
@@ -62,41 +57,73 @@ public class ProductDAO {
         if (promotionId != null) {
             sql.append(" AND p.id IN (SELECT product_id FROM promotion_items WHERE promotion_id = ?) ");
         }
-        // chia keyword theo từng từ và tìm theo từng từ đó
-        if (!keywords.isEmpty()) {
+        if (hasSearch) {
             sql.append(" AND (");
+
+            sql.append("LOWER(p.name) LIKE ? ");
+
             for (int i = 0; i < keywords.size(); i++) {
-                if (i > 0) sql.append(" OR ");
-                sql.append(" LOWER(p.name) LIKE ? ");
+                sql.append("OR LOWER(p.name) LIKE ? ");
             }
             sql.append(") ");
         }
 
         if (status != null && !status.isEmpty()) {
-            if ("active".equals(status)) sql.append(" AND p.status = 'active' ");
-            else if ("inactive".equals(status)) sql.append(" AND p.status = 'inactive' ");
-            else if ("out-of-stock".equals(status)) sql.append(" AND p.stock_quantity = 0 ");
+            if ("active".equals(status)) {
+                sql.append(" AND p.status = 'active' ");
+            } else if ("inactive".equals(status)) {
+                sql.append(" AND p.status = 'inactive' ");
+            } else if ("out-of-stock".equals(status)) {
+                sql.append(" AND p.stock_quantity = 0 ");
+            }
         }
 
-        if (sort != null) {
-            switch (sort) {
-                case "price-asc":
-                    sql.append(" ORDER BY p.price ASC ");
-                    break;
-                case "price-desc":
-                    sql.append(" ORDER BY p.price DESC ");
-                    break;
-                case "name-asc":
-                    sql.append(" ORDER BY p.name ASC ");
-                    break;
-                case "newest":
-                    sql.append(" ORDER BY p.created_at DESC ");
-                    break;
-                default:
-                    sql.append(" ORDER BY p.created_at DESC ");
+        if (hasSearch) {
+            sql.append(" ORDER BY ");
+            sql.append("CASE ");
+            sql.append("WHEN LOWER(p.name) LIKE ? THEN 100 ");
+
+            if (!keywords.isEmpty()) {
+                sql.append("WHEN ");
+                for (int i = 0; i < keywords.size(); i++) {
+                    if (i > 0) sql.append(" AND ");
+                    sql.append("LOWER(p.name) LIKE ? ");
+                }
+                sql.append("THEN 80 ");
+            }
+
+            sql.append("ELSE 10 END DESC, ");
+
+            if ("price-asc".equals(sort)) {
+                sql.append("p.price ASC ");
+            } else if ("price-desc".equals(sort)) {
+                sql.append("p.price DESC ");
+            } else if ("name-asc".equals(sort)) {
+                sql.append("p.name ASC ");
+            } else {
+                sql.append("p.created_at DESC ");
             }
         } else {
-            sql.append(" ORDER BY p.created_at DESC ");
+            if (sort != null) {
+                switch (sort) {
+                    case "price-asc":
+                        sql.append(" ORDER BY p.price ASC ");
+                        break;
+                    case "price-desc":
+                        sql.append(" ORDER BY p.price DESC ");
+                        break;
+                    case "name-asc":
+                        sql.append(" ORDER BY p.name ASC ");
+                        break;
+                    case "newest":
+                        sql.append(" ORDER BY p.created_at DESC ");
+                        break;
+                    default:
+                        sql.append(" ORDER BY p.created_at DESC ");
+                }
+            } else {
+                sql.append(" ORDER BY p.created_at DESC ");
+            }
         }
 
         sql.append(" LIMIT ? OFFSET ?");
@@ -106,12 +133,28 @@ public class ProductDAO {
 
             int paramIndex = 1;
 
-            if (categoryId != null) ps.setInt(paramIndex++, categoryId);
-            if (maxPrice != null) ps.setDouble(paramIndex++, maxPrice);
-            if (promotionId != null) ps.setInt(paramIndex++, promotionId);
+            if (categoryId != null) {
+                ps.setInt(paramIndex++, categoryId);
+            }
 
-            for (String keyword : keywords) {
-                ps.setString(paramIndex++, "%" + keyword + "%");
+            if (maxPrice != null) {
+                ps.setDouble(paramIndex++, maxPrice);
+            }
+
+            if (promotionId != null) {
+                ps.setInt(paramIndex++, promotionId);
+            }
+
+            if (hasSearch) {
+                paramIndex = setProductNameSearchParams(ps, paramIndex, search, keywords);
+
+                String phrase = "%" + search.trim().toLowerCase() + "%";
+                ps.setString(paramIndex++, phrase);
+
+                for (String keyword : keywords) {
+                    String kw = "%" + keyword + "%";
+                    ps.setString(paramIndex++, kw);
+                }
             }
 
             int offset = (index - 1) * size;
@@ -165,20 +208,14 @@ public class ProductDAO {
     }
 
     public int countProducts(Integer categoryId, Integer promotionId, Double maxPrice, String search, String status) {
-        List<String> keywords = new ArrayList<>();
-        if (search != null && !search.isBlank()) {
-            for (String keyword : search.trim().toLowerCase().split("\\s+")) {
-                if (!keyword.isBlank()) {
-                    keywords.add(keyword);
-                }
-            }
-        }
+        List<String> keywords = splitSearchKeywords(search);
+        boolean hasSearch = search != null && !search.trim().isEmpty();
+
         StringBuilder sql = new StringBuilder("SELECT COUNT(*) FROM products p ");
 
         if (promotionId != null) {
             sql.append(" JOIN promotion_items pi ON p.id = pi.product_id ");
         }
-
         sql.append(" WHERE 1=1 ");
 
         if (categoryId != null) {
@@ -188,23 +225,28 @@ public class ProductDAO {
         if (maxPrice != null) {
             sql.append(" AND (CASE WHEN p.sale_price > 0 THEN p.sale_price ELSE p.price END) <= ? ");
         }
-
         if (promotionId != null) {
             sql.append(" AND pi.promotion_id = ? ");
         }
-        if (!keywords.isEmpty()) {
+
+        if (hasSearch) {
             sql.append(" AND (");
+            sql.append("LOWER(p.name) LIKE ? ");
+
             for (int i = 0; i < keywords.size(); i++) {
-                if (i > 0) sql.append(" OR ");
-                sql.append(" LOWER(p.name) LIKE ? ");
+                sql.append("OR LOWER(p.name) LIKE ? ");
             }
             sql.append(") ");
         }
 
         if (status != null && !status.isEmpty()) {
-            if ("active".equals(status)) sql.append(" AND p.status = 'active' ");
-            else if ("inactive".equals(status)) sql.append(" AND p.status = 'inactive' ");
-            else if ("out-of-stock".equals(status)) sql.append(" AND p.stock_quantity = 0 ");
+            if ("active".equals(status)) {
+                sql.append(" AND p.status = 'active' ");
+            } else if ("inactive".equals(status)) {
+                sql.append(" AND p.status = 'inactive' ");
+            } else if ("out-of-stock".equals(status)) {
+                sql.append(" AND p.stock_quantity = 0 ");
+            }
         }
 
         try (Connection conn = ds.getConnection();
@@ -212,23 +254,32 @@ public class ProductDAO {
 
             int paramIndex = 1;
 
-            if (categoryId != null) ps.setInt(paramIndex++, categoryId);
-            if (maxPrice != null) ps.setDouble(paramIndex++, maxPrice);
-            if (promotionId != null) ps.setInt(paramIndex++, promotionId);
+            if (categoryId != null) {
+                ps.setInt(paramIndex++, categoryId);
+            }
 
-            for (String keyword : keywords) {
-                ps.setString(paramIndex++, "%" + keyword + "%");
+            if (maxPrice != null) {
+                ps.setDouble(paramIndex++, maxPrice);
+            }
+
+            if (promotionId != null) {
+                ps.setInt(paramIndex++, promotionId);
+            }
+
+            if (hasSearch) {
+                paramIndex = setProductNameSearchParams(ps, paramIndex, search, keywords);
             }
 
             ResultSet rs = ps.executeQuery();
-            if (rs.next()) return rs.getInt(1);
+            if (rs.next()) {
+                return rs.getInt(1);
+            }
 
         } catch (Exception e) {
             e.printStackTrace();
         }
         return 0;
     }
-
     public Product getProductById(int id) {
         String sql = "SELECT p.*, " +
                 "pi.promotion_id AS current_promo_id, " +
@@ -578,5 +629,39 @@ public class ProductDAO {
             e.printStackTrace();
         }
         return false;
+    }
+    private List<String> splitSearchKeywords(String search) {
+        List<String> keywords = new ArrayList<>();
+
+        if (search == null || search.trim().isEmpty()) {
+            return keywords;
+        }
+
+        String[] parts = search.trim().toLowerCase().split("\\s+");
+        for (String part : parts) {
+            if (!part.trim().isEmpty()) {
+                keywords.add(part.trim());
+            }
+        }
+
+        return keywords;
+    }
+
+    private int setProductNameSearchParams(PreparedStatement ps, int paramIndex, String search, List<String> keywords) throws SQLException {
+        if (search == null || search.trim().isEmpty()) {
+            return paramIndex;
+        }
+
+        // Match nguyên cụm: ví dụ "trà đào"
+        String phrase = "%" + search.trim().toLowerCase() + "%";
+        ps.setString(paramIndex++, phrase);
+
+        // Match từng từ: ví dụ "trà", "đào"
+        for (String keyword : keywords) {
+            String kw = "%" + keyword + "%";
+            ps.setString(paramIndex++, kw);
+        }
+
+        return paramIndex;
     }
 }
